// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`search map common 1`] = `
Map {
  "甲" => {
    "cd": "",
    "collision": 1,
    "ln": 2,
    "wd": "甲",
  },
  "a" => {
    "cd": "",
    "collision": 2,
    "ln": 2,
    "wd": "a",
  },
  "乙" => {
    "cd": "",
    "collision": 3,
    "ln": 3,
    "wd": "乙",
  },
  "b" => {
    "cd": "",
    "collision": 4,
    "ln": 3,
    "wd": "b",
  },
  "甲乙" => {
    "cd": "",
    "collision": 5,
    "ln": 4,
    "wd": "甲乙",
  },
  "c" => {
    "cd": "",
    "collision": 6,
    "ln": 4,
    "wd": "c",
  },
}
`;

exports[`search map duplicated code 1`] = `
Map {
  "甲" => {
    "cd": "",
    "collision": 1,
    "ln": 2,
    "wd": "甲",
  },
  "aa" => {
    "cd": "",
    "collision": 2,
    "ln": 2,
    "wd": "aa",
  },
  "a" => {
    "cd": "",
    "collision": 4,
    "ln": 3,
    "wd": "a",
  },
}
`;

exports[`search regex eager order 1`] = `/^(甲乙|甲)/`;

exports[`search regex mb order 1`] = `/^(甲|甲乙)/`;

exports[`simurate common 1`] = `
{
  "Eq": 1.2,
  "char": 2,
  "codeLen": 1,
  "codeLenDist": [
    1,
    0,
  ],
  "collectArray": [],
  "collision": 1,
  "collisionDist": [
    1,
  ],
  "combo": 1,
  "comboDist": {
    "c ": 1,
  },
  "commit": 1,
  "diffHand": 0,
  "double": 0,
  "finDist": [
    1,
    0,
    0,
    1,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
  ],
  "kbdRowDist": [
    0,
    0,
    0,
    1,
    1,
  ],
  "keys": 2,
  "keysDist": {
    " ": 1,
    "c": 1,
  },
  "lackCounter": Map {},
  "lackString": "",
  "lacks": 0,
  "leftLeft": 1,
  "leftRight": 0,
  "littleFD": 0,
  "longFD": 0,
  "multiSpan": 0,
  "rightLeft": 0,
  "rightRight": 0,
  "sameFingers": 0,
  "singleSpan": 0,
  "wordsDist": [
    0,
    1,
  ],
}
`;
